Added Option Checkbox

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Webpack Black Triangle</title>
+    <title>Test</title>
     <link rel="stylesheet/less" type="text/css" href="theme/main.less" />
   </head>
   <body>
-    <div id="metafield" class="">
+    <div id="metafield" class="test-container-noinput">
       Este texto debe ser azul
     </div>
     <script src="main.js"></script>
