--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,13 @@
     <link rel="stylesheet/less" type="text/css" href="theme/main.less" />
   </head>
   <body>
-    <div id="metafield" class="test-container-noinput">
+    <div id="metafielddiv" class="test-container-noinput">
       Este texto debe ser azul
     </div>
+    <div id="metafieldcheckbox" class="test-container-noinput">
+      Este texto debe ser azul
+    </div>
+
     <script src="main.js"></script>
   </body>
 </html>
